Add "Environment" objects for a more easy setup of a test environment

--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -53,6 +53,8 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +93,15 @@
     <Compile Include="BasicElements\BasicTreeView.cs" />
     <Compile Include="BasicElements\BasicTreeViewItem.cs" />
     <Compile Include="BasicElements\BasicWindow.cs" />
+    <Compile Include="Environment\CloseExecuter.cs" />
+    <Compile Include="Environment\CopyExecuter.cs" />
+    <Compile Include="Environment\CreateExecuter.cs" />
+    <Compile Include="Environment\DeleteExecuter.cs" />
+    <Compile Include="Environment\EnvironmentSetup.cs" />
+    <Compile Include="Environment\Executer.cs" />
+    <Compile Include="Environment\ExecuterFactory.cs" />
+    <Compile Include="Environment\RunExecuter.cs" />
+    <Compile Include="Environment\WaitExecuter.cs" />
     <Compile Include="Interaction\At.cs" />
     <Compile Include="Interaction\KeyboardCommands.cs" />
     <Compile Include="Interaction\KeyboardEx.cs" />
@@ -106,6 +117,9 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Utilities\WindowFocus.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Example.xml" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
