--- a/DW.CodedUI.Tryouts/DW.CodedUI.Tryouts.csproj
+++ b/DW.CodedUI.Tryouts/DW.CodedUI.Tryouts.csproj
@@ -59,6 +59,9 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\DW.CodedUI\Properties\CommonMeta.cs">
+      <Link>Properties\CommonMeta.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tryout.cs" />
   </ItemGroup>
