--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -65,9 +65,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Application\ApplicationFactory.cs" />
-    <Compile Include="Application\WindowSearchCondition.cs" />
-    <Compile Include="Application\WindowState.cs" />
+    <Compile Include="Internal\StringExtensions.cs" />
     <Compile Include="Properties\CommonMeta.cs" />
     <Compile Include="BasicElements\BasicButton.cs" />
     <Compile Include="BasicElements\BasicCheckBox.cs" />
@@ -91,24 +89,22 @@
     <Compile Include="BasicElements\BasicTreeView.cs" />
     <Compile Include="BasicElements\BasicTreeViewItem.cs" />
     <Compile Include="BasicElements\BasicWindow.cs" />
-    <Compile Include="Interaction\At.cs" />
-    <Compile Include="Interaction\KeyboardCommands.cs" />
-    <Compile Include="Interaction\KeyboardEx.cs" />
-    <Compile Include="Interaction\MessageBoxHandler.cs" />
-    <Compile Include="Interaction\MouseEx.cs" />
+    <Compile Include="At.cs" />
+    <Compile Include="KeyboardCommands.cs" />
+    <Compile Include="KeyboardEx.cs" />
+    <Compile Include="MouseEx.cs" />
     <Compile Include="Internal\WinApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="By.cs" />
     <Compile Include="CombinableBy.cs" />
     <Compile Include="CombinableWith.cs" />
     <Compile Include="From.cs" />
-    <Compile Include="UITree\BasicElementFinder.cs" />
-    <Compile Include="UITree\MessageBoxFinder.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="UIElementNotFoundException.cs" />
-    <Compile Include="UITree\WindowFinder.cs" />
+    <Compile Include="WindowFinder.cs" />
+    <Compile Include="WindowState.cs" />
     <Compile Include="With.cs" />
-    <Compile Include="WithConditions.cs" />
+    <Compile Include="WithCondition.cs" />
     <Compile Include="Utilities\ColorDetector.cs" />
     <Compile Include="Utilities\Highlighter.cs">
       <SubType>Form</SubType>
