--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -68,7 +68,9 @@
     <Compile Include="And.cs" />
     <Compile Include="AndCondition.cs" />
     <Compile Include="BasicElements\BasicBrowseFolderDialog.cs" />
+    <Compile Include="BasicElements\BasicFontPickerDialog.cs" />
     <Compile Include="BasicElements\BasicSaveFileDialog.cs" />
+    <Compile Include="BasicElements\BasicDialog.cs" />
     <Compile Include="CombinableAnd.cs" />
     <Compile Include="CombinableUsing.cs" />
     <Compile Include="CompareKind.cs" />
