Add BasicColorPickerDialog; Add search for font picker and color picker dialogs in the WindowSearcher

--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -68,6 +68,7 @@
     <Compile Include="And.cs" />
     <Compile Include="AndCondition.cs" />
     <Compile Include="BasicElements\BasicBrowseFolderDialog.cs" />
+    <Compile Include="BasicElements\BasicColorPickerDialog.cs" />
     <Compile Include="BasicElements\BasicFontPickerDialog.cs" />
     <Compile Include="BasicElements\BasicSaveFileDialog.cs" />
     <Compile Include="BasicElements\BasicDialog.cs" />
