--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -72,6 +72,7 @@
     <Compile Include="BasicElements\BasicFontPickerDialog.cs" />
     <Compile Include="BasicElements\BasicSaveFileDialog.cs" />
     <Compile Include="BasicElements\BasicDialog.cs" />
+    <Compile Include="BasicElements\BasicWindowBase.cs" />
     <Compile Include="CombinableAnd.cs" />
     <Compile Include="CombinableUsing.cs" />
     <Compile Include="CompareKind.cs" />
