Its easier if the large and short views have separate viewmodels; Add highlighting; Add possibility to deactivate the window searching

--- a/ElementFinder/ElementFinder.csproj
+++ b/ElementFinder/ElementFinder.csproj
@@ -71,7 +71,8 @@
     <Compile Include="LargeView.xaml.cs">
       <DependentUpon>LargeView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainViewModel.cs" />
+    <Compile Include="LargeViewModel.cs" />
+    <Compile Include="ShortViewModel.cs" />
     <Compile Include="ShortView.xaml.cs">
       <DependentUpon>ShortView.xaml</DependentUpon>
     </Compile>
