Show item automation properties; Add possibility to hide empty properties; Automatically select the first element in the tree

--- a/ElementFinder/app.config
+++ b/ElementFinder/app.config
@@ -25,6 +25,9 @@
             <setting name="Position" serializeAs="String">
                 <value>0, 0</value>
             </setting>
+            <setting name="HideEmptyEntries" serializeAs="String">
+                <value>True</value>
+            </setting>
         </ElementFinder.Properties.Settings>
     </userSettings>
 </configuration>
