--- a/ElementFinder/Properties/Settings.settings
+++ b/ElementFinder/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="Position" Type="System.Drawing.Point" Scope="User">
       <Value Profile="(Default)">0, 0</Value>
     </Setting>
+    <Setting Name="HideEmptyEntries" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
