Add possibilities to show a matching BasicElement

--- a/ElementFinder/ElementFinder.csproj
+++ b/ElementFinder/ElementFinder.csproj
@@ -81,7 +81,7 @@
     <Compile Include="MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PropertiesControl.cs" />
+    <Compile Include="AutomationPropertiesControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
