Add possibility to copy the automation id to the clipboard automatically

--- a/ElementFinder/app.config
+++ b/ElementFinder/app.config
@@ -28,6 +28,9 @@
             <setting name="HideEmptyEntries" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="AutoCopyAutomationId" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ElementFinder.Properties.Settings>
     </userSettings>
 </configuration>
