--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -33,7 +33,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\</OutputPath>
-    <DefineConstants>TRACE;TRIAL</DefineConstants>
+    <DefineConstants>TRACE;NOTRIAL</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\bin\DW.CodedUI.XML</DocumentationFile>
@@ -138,9 +138,6 @@
     <Compile Include="Utilities\WindowFocus.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="my-libraries.pfx" />
-  </ItemGroup>
-  <ItemGroup>
     <Page Include="Internal\License.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -148,6 +145,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Internal\Logo.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="my-libraries.pfx" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
