Use a toggle slider for a better visualization of the enabled and disabled state of the ElementFinder

--- a/ElementFinder/ElementFinder.csproj
+++ b/ElementFinder/ElementFinder.csproj
@@ -89,6 +89,7 @@
     </Compile>
     <Compile Include="MainViewModel.cs" />
     <Compile Include="Property.cs" />
+    <Compile Include="ToggleSlider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutomationPropertiesControl.cs" />
