Add possibility to define the ElementFinder TopMost or not; Adjust link for the Interop.UIAutomationClient

--- a/ElementFinder/app.config
+++ b/ElementFinder/app.config
@@ -31,6 +31,9 @@
             <setting name="AutoCopyAutomationId" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="TopMost" serializeAs="String">
+                <value>True</value>
+            </setting>
         </ElementFinder.Properties.Settings>
     </userSettings>
 </configuration>
