Add blacklisted applications

--- a/ElementFinder/app.config
+++ b/ElementFinder/app.config
@@ -37,6 +37,9 @@
             <setting name="LeftColumnWidth" serializeAs="String">
                 <value>50</value>
             </setting>
+            <setting name="BlacklistedProcesses" serializeAs="String">
+                <value>devenv,explorer,notepad,word,excel,outlook</value>
+            </setting>
         </ElementFinder.Properties.Settings>
     </userSettings>
 </configuration>
