--- a/ElementFinder/Properties/Settings.settings
+++ b/ElementFinder/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="LeftColumnWidth" Type="System.Double" Scope="User">
       <Value Profile="(Default)">50</Value>
     </Setting>
+    <Setting Name="BlacklistedProcesses" Type="System.String" Scope="User">
+      <Value Profile="(Default)">devenv,explorer,notepad,word,excel,outlook</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
