--- a/ElementFinder/app.config
+++ b/ElementFinder/app.config
@@ -40,6 +40,9 @@
             <setting name="BlacklistedProcesses" serializeAs="String">
                 <value>devenv,explorer,notepad,word,excel,outlook</value>
             </setting>
+            <setting name="TopMostHighlighter" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ElementFinder.Properties.Settings>
     </userSettings>
 </configuration>
