Add possibility to keep element highlighter position and size up to date

--- a/ElementFinder/app.config
+++ b/ElementFinder/app.config
@@ -43,6 +43,9 @@
             <setting name="TopMostHighlighter" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="NoticeHighlightPosition" serializeAs="String">
+                <value>True</value>
+            </setting>
         </ElementFinder.Properties.Settings>
     </userSettings>
 </configuration>
