--- a/ElementFinder/ElementFinder.csproj
+++ b/ElementFinder/ElementFinder.csproj
@@ -68,6 +68,7 @@
     <Compile Include="BL\CatchedElementsEventArgs.cs" />
     <Compile Include="BL\ElementsCatcher.cs" />
     <Compile Include="BL\InteractionObserver.cs" />
+    <Compile Include="BL\PositionObserver.cs" />
     <Compile Include="Controls\AutomationPropertiesControl.cs" />
     <Compile Include="Controls\CopyableTextBox.cs" />
     <Compile Include="Controls\Property.cs" />
