--- a/ElementFinder/app.config
+++ b/ElementFinder/app.config
@@ -46,6 +46,21 @@
             <setting name="NoticeHighlightPosition" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="EnableDisableShortcut" serializeAs="String">
+                <value>LeftCtrl + E</value>
+            </setting>
+            <setting name="CopyAutomationIdShortcut" serializeAs="String">
+                <value>LeftCtrl + LeftShift + C</value>
+            </setting>
+            <setting name="BringOnTopShortcut" serializeAs="String">
+                <value>LeftCtrl + LeftShift + T</value>
+            </setting>
+            <setting name="ToggleViewShortcut" serializeAs="String">
+                <value>LeftCtrl + V</value>
+            </setting>
+            <setting name="WatchForElementsShortcut" serializeAs="String">
+                <value>LeftCtrl + LeftShift</value>
+            </setting>
         </ElementFinder.Properties.Settings>
     </userSettings>
 </configuration>
